--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="start_read">开始阅读</string>
     <string name="catalog">目录</string>
     <string name="books_maybe_interest">你可能感兴趣</string>
+    <string name="search_label">搜索</string>
+    <string name="search_hint">请输入书名|作者名</string>
 </resources>
