--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="add_bookshelf">加入书架</string>
     <string name="start_read">开始阅读</string>
     <string name="catalog">目录</string>
+    <string name="reverse_order">倒序</string>
+    <string name="positive_order">正序</string>
     <string name="books_maybe_interest">你可能感兴趣</string>
     <string name="search_label">搜索</string>
     <string name="search_hint">请输入书名|作者名</string>
