--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="books_maybe_interest">你可能感兴趣</string>
     <string name="search_label">搜索</string>
     <string name="search_hint">请输入书名|作者名</string>
+    <string name="bookdetail_wordcount">%1$d字</string>
 </resources>
