--- a/ireader/src/main/res/values/strings.xml
+++ b/ireader/src/main/res/values/strings.xml
@@ -138,8 +138,8 @@
     <string name="nb.book_detail.community">%1$s的社区</string>
     <string name="nb.book_detail.posts_count">共有%1$d个帖子</string>
     <string name="nb.book_detail.recommend_book_list">推荐书单</string>
-    <string name="nb.book_detail.chase_update">追更</string>
-    <string name="nb.book_detail.give_up">放弃</string>
+    <string name="nb.book_detail.chase_update">加入书架</string>
+    <string name="nb.book_detail.give_up">移出书架</string>
     <string name="nb.book_detail.start_read">开始阅读</string>
 
     <!--DownloadTask:书籍下载-->
