--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="bookdetail_wordcount">%1$d字</string>
     <string name="bookshelf_empty">书架暂无书籍</string>
     <string name="rank_category_item_cat_wordcount">%1$s·%2$s</string>
+    <string name="about">关于</string>
+    <string name="activity_about_text">作者自娱之作,内容均来源于网络\n\n应用内书架为本地书架，卸载重装或清除数据后无法恢复</string>
 </resources>
