--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="bookshelf_empty">书架暂无书籍</string>
     <string name="rank_category_item_cat_wordcount">%1$s·%2$s</string>
     <string name="about">关于</string>
-    <string name="activity_about_text">作者自娱之作,内容均来源于网络\n\n应用内书架为本地书架，卸载重装或清除数据后无法恢复</string>
+    <string name="activity_about_text">作者自娱之作,内容均来源于网络\n\n应用内书架为本地书架，卸载重装或清除数据后无法恢复，只有加入书架的书籍章节会缓存
+    </string>
     <string name="no_more_text">我是有底线的</string>
     <string name="load_more_text">正在加载中</string>
     <string name="load_failed_text">加载失败，点击重试</string>
