--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_rank">排行榜</string>
     <string name="add_bookshelf">加入书架</string>
     <string name="start_read">开始阅读</string>
+    <string name="continue_read">继续阅读</string>
     <string name="catalog">目录</string>
     <string name="reverse_order">倒序</string>
     <string name="positive_order">正序</string>
@@ -23,4 +24,5 @@
     <string name="no_more_text">我是有底线的</string>
     <string name="load_more_text">正在加载中</string>
     <string name="load_failed_text">加载失败，点击重试</string>
+    <string name="bookdetail_title">书籍详情</string>
 </resources>
