--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -19,10 +19,18 @@
     <string name="bookshelf_empty">書架暫無書籍</string>
     <string name="rank_category_item_cat_wordcount">%1$s·%2$s</string>
     <string name="about">關於</string>
-    <string name="activity_about_text">作者自娛之作,內容均來源于網絡\n\n應用內書架為本地書架，卸載重裝或清除數據后無法恢復，只有加入書架的書籍章節會緩存
+    <string name="change_source">切換來源</string>
+    <string name="activity_about_text">
+        作者自娛之作,內容均來源于網絡。\n\n
+        應用內書架為本地書架，卸載重裝或清除數據后無法恢復，只有加入書架的書籍章節會緩存。\n\n
+        小說來源有時不穩定，這時可以嘗試切換來源，陸續會切入多個來源。
     </string>
     <string name="no_more_text">我是有底線的</string>
     <string name="load_more_text">正在加載中</string>
     <string name="load_failed_text">加載失敗，點擊重試</string>
     <string name="bookdetail_title">書籍詳情</string>
+    <string-array name="male_or_female">
+        <item>男頻</item>
+        <item>女頻</item>
+    </string-array>
 </resources>
