--- a/ireader/src/main/res/values/strings.xml
+++ b/ireader/src/main/res/values/strings.xml
@@ -215,4 +215,8 @@
         <item>臺灣正體到簡體</item>
         <item>香港繁體到簡體</item>
     </string-array>
+    <string-array name="book_source">
+        <item>bxwx3->http://www.bxwx3.org</item>
+        <item>biqugexsw->http://www.biqugexsw.com</item>
+    </string-array>
 </resources>
