--- a/ireader/src/main/res/values/strings.xml
+++ b/ireader/src/main/res/values/strings.xml
@@ -219,4 +219,8 @@
         <item>bxwx3->http://www.bxwx3.org</item>
         <item>biqugexsw->http://www.biqugexsw.com</item>
     </string-array>
+    <string-array name="book_source_search">
+        <item>bxwx3->http://www.bxwx3.org/search.aspx?bookname=</item>
+        <item>biqugexsw->http://www.biqugexsw.com/s.php?q=</item>
+    </string-array>
 </resources>
