--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,10 @@
     <string name="books_maybe_interest">你可能感兴趣</string>
     <string name="search_label">搜索</string>
     <string name="search_hint">请输入书名|作者名</string>
+    <string name="bookdetail_author">作者：%1$s</string>
     <string name="bookdetail_wordcount">%1$d字</string>
+    <string name="bookdetail_updated">更新时间：%1$s</string>
+    <string name="bookdetail_last_chapter">最新一章：%1$s</string>
     <string name="bookshelf_empty">书架暂无书籍</string>
     <string name="rank_category_item_cat_wordcount">%1$s·%2$s</string>
     <string name="about">关于</string>
