--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="search_label">搜索</string>
     <string name="search_hint">请输入书名|作者名</string>
     <string name="bookdetail_author">作者：%1$s</string>
-    <string name="bookdetail_wordcount">%1$d字</string>
+    <string name="bookdetail_wordcount">%1$s字</string>
     <string name="bookdetail_updated">更新时间：%1$s</string>
     <string name="bookdetail_last_chapter">最新一章：%1$s</string>
     <string name="bookshelf_empty">书架暂无书籍</string>
