--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="load_more_text">正在加载中</string>
     <string name="load_failed_text">加载失败，点击重试</string>
     <string name="bookdetail_title">书籍详情</string>
+    <string name="bookdetail_empty_data">暂无数据</string>
     <string-array name="male_or_female">
         <item>男频</item>
         <item>女频</item>
